--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,11 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+    <style>
+        body,html{
+            height: 100%;
+            padding: 0;
+            margin: 0;
+        }
+    </style>
 </html>
